<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/binarySettingsChunk"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RadioGroup
        android:id="@+id/radioGroupBinary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="3dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/threshToZero"
            android:layout_width="128dp"
            android:layout_height="21dp"
            android:fontFamily="@font/consolab"
            android:text="@string/to_zero"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/colorTransparentWhite"
            android:textSize="12sp"/>

        <RadioButton
            android:id="@+id/threshToZeroInv"
            android:layout_width="180dp"
            android:layout_height="21dp"
            android:fontFamily="@font/consolab"
            android:text="@string/threshtozeroinv"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/colorTransparentWhite"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/threshTruncate"
            android:layout_width="128dp"
            android:layout_height="21dp"
            android:fontFamily="@font/consolab"
            android:text="@string/thresholdtruncate"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/colorTransparentWhite"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/threshBinary"
            android:layout_width="128dp"
            android:layout_height="21dp"
            android:fontFamily="@font/consolab"
            android:text="@string/thresholdbinary"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/colorTransparentWhite"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/threshBinaryInv"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:fontFamily="@font/consolab"
            android:text="@string/thresholdbininv"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/colorTransparentWhite"
            android:textSize="12sp" />
    </RadioGroup>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="12dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupBinary" />

    <TableLayout
        android:id="@+id/tableLayout5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/thresholdValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/consola"
                android:text="@string/threshval"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/colorTransparentWhite"
                android:textSize="12sp" />

            <SeekBar
                android:id="@+id/seekBarThresholdValue"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:max="255"
                android:min="0"
                android:progress="127" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/emptyGap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

            <TextView
                android:id="@+id/bThresh"
                android:layout_width="243dp"
                android:layout_height="match_parent"
                android:fontFamily="@font/consola"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="#566EF7"
                android:textSize="12sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/maxthresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/consola"
                android:text="@string/maxthresh"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/colorTransparentWhite"
                android:textSize="12sp" />

            <SeekBar
                android:id="@+id/seekBarMaxValBinary"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:max="255"
                android:min="0"
                android:progress="255" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/emptyGap3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

            <TextView
                android:id="@+id/bMaxThresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/consola"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="#566EF7"
                android:textSize="12sp" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Switch
                android:id="@+id/switch6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/consola"
                android:text="@string/dilate_erode"
                android:textColor="@color/colorTransparentWhite"
                android:textSize="12sp" />

            <SeekBar
                android:id="@+id/seekBarMorphKernelBinary"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:max="32"
                android:min="2"
                android:progress="12"
                android:visibility="gone" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Switch
                android:id="@+id/switch7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/consola"
                android:text="@string/inv_mask"
                android:textColor="@color/colorTransparentWhite"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/morphKernelBinaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="#566EF7"
                android:visibility="gone" />
        </TableRow>


    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>